[gd_scene load_steps=2 format=3 uid="uid://dgjpjqu0wbr62"]

[ext_resource type="Script" uid="uid://t0kqjgl7tdbx" path="res://save_menu.gd" id="1_14sge"]

[node name="SaveMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_14sge")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel2" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -476.0
offset_top = -168.0
offset_right = 484.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="SaveSlotContainer" type="HBoxContainer" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 256.0
grow_horizontal = 2
theme_override_constants/separation = 24
alignment = 1

[node name="DeleteSaveContainer" type="HBoxContainer" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -128.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_right = -56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 14
theme_override_constants/v_separation = 30
columns = 3

[node name="EnterName" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -64.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Enter Name"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/EnterName"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -540.0
offset_right = 540.0
offset_bottom = 128.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 78
text = "Save"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_submitted" from="CanvasLayer/EnterName/LineEdit" to="." method="set_player_name"]
